# FitnessTracker

./: CMakeLists.txt  database.cpp  database.h  datacontroller.cpp  datacontroller.h  loginscreen.cpp  loginscreen.h  loginscreen.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui
public/: database.h  displayinformation.h  mainwindow.h  secondwindow.h  trackingmenu.h
src/: database.cpp  loginscreen.cpp  mainwindow.cpp  secondwindow.cpp  trackingmenu.cpp
ui/: loginscreen.ui  mainwindow.ui  secondwindow.ui  trackingmenu.ui
